# testing_exercises

./: .coverage  .gitignore  conftest.py  coverage.xml  pyproject.toml  requirements.txt  setup.cfg
functions/level_1/: five_title.py  four_bank_parser.py  two_date_parser.py
functions/level_1_5/: one_median.py
functions/level_1_7/: four_fraud.py
functions/level_2/: three_first.py
tests/: conftest.py  test_five_title.py  test_four_bank_parser.py  test_one_gender.py  test_three_url_builder.py  test_two_date_parser.py
tests/files/: config.ini  five_lines_file.txt
tests/level_1/: conftest.py  test_five_title.py  test_four_bank_parser.py  test_one_gender.py  test_three_url_builder.py  test_two_date_parser.py
tests/level_1.5/: test_five_replace_word.py  test_four_sentiment.py  test_one_median.py  test_three_first.py  test_two_square_equation.py  test_two_squre_equation.py
tests/level_1_5/: conftest.py  test_first.py  test_five_replace_word.py  test_five_replace_word_parametrize.py  test_four_check_tweet_sentiment.py  test_four_sentiment.py  test_four_sentiment_parametrize.py  test_one_median.py  test_solve_square_equation.py  test_three.py  test_three_first.py  test_two__square_equation.py  test_two_square_equation.py  test_two_squre_equation.py
tests/level_1_7/: test_four_fraud.py  test_one_avg_daily_expenses.py  test_three_is_subscription.py  test_two_expense_categorizer.py
tests/level_2/: conftest.py  test_five_extra_fields.py  test_five_replace_word.py  test_four_lines_counter.py  test_four_sentiment.py  test_generate_promocode.py  test_one_brackets.py  (+8 more)
(+5 files in other folders)
